<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="photo_editor_app_name">Photo Editor</string>
    <string name="photo_editor_action_settings">Settings</string>
    <string name="photo_editor">Photo Editor</string>
    <string name="photo_editor_effect">Effect</string>
    <string name="photo_editor_crop">Crop</string>
    <string name="photo_editor_rotate">Rotate</string>
    <string name="photo_editor_focus">Focus</string>
    <string name="photo_editor_shade">Shade</string>
    <string name="photo_editor_frame">Frame</string>
    <string name="photo_editor_blur">Blur</string>
    <string name="photo_editor_brightness">Brightness</string>
    <string name="photo_editor_constrast">Constrast</string>
    <string name="photo_editor_saturation">Saturation</string>
    <string name="photo_editor_warmth">Warmth</string>
    <string name="photo_editor_sharpness">Sharpness</string>
    <string name="photo_editor_draw">Draw</string>
    <string name="photo_editor_original">Original</string>
    <string name="photo_editor_square">Square</string>
    <string name="photo_editor_custom">Custom</string>
    <string name="photo_editor_radial">Radial</string>
    <string name="photo_editor_linear">Linear</string>
    <string name="photo_editor_no_focus">No focus</string>
    <string name="photo_editor_done">Done</string>
    <string name="photo_editor_apply">Apply</string>
    <string name="photo_editor_touch_blur">Touch blur</string>
    <string name="photo_editor_waring_out_of_memory">Not enough memory. Please remove images or your program will be crashed.!!!</string>
    <string name="photo_editor_meme">Meme</string>
    <string name="photo_editor_center">Center</string>
    <string name="photo_editor_text">Text</string>
    <string name="photo_editor_enter_top_caption">Enter top caption</string>
    <string name="photo_editor_enter_bottom_caption">Enter bottom caption</string>
    <string name="photo_editor_enter_center_caption">Enter center caption</string>
    <string name="photo_editor_text_so_long">Your text is so long.</string>
    <!-- Color Picker -->
    <string name="photo_editor_dialog_color_picker">Color Picker</string>
    <string name="photo_editor_press_color_to_apply">Press on Color to apply</string>
    <string name="photo_editor_color">Color</string>
    <string name="photo_editor_emboss">Emboss</string>
    <string name="photo_editor_src_a_top">SrcATop</string>
    <string name="photo_editor_erase">Erase</string>
    <string name="photo_editor_size">Size</string>
    <string name="photo_editor_resize">Resize</string>
    <string name="photo_editor_normal">Normal</string>
    <string name="photo_editor_clear">Clear</string>
    <string name="photo_editor_store_items">Store</string>
    <string name="photo_editor_free">Free</string>
    <string name="photo_editor_used">Used</string>
    <string name="photo_editor_item">Item(s)</string>
    <string name="photo_editor_uninstall">Uninstall</string>
    <string name="photo_editor_downloading">Downloading</string>
    <string name="photo_editor_album">Album</string>
    <string name="photo_editor_home">Home</string>
    <string name="photo_editor_select">Select</string>
    <string name="photo_editor_camera">Camera</string>
    <string name="photo_editor_photo_library">Photo Library</string>
    <string name="photo_editor_cancel">Cancel</string>
    <string name="photo_editor_award_remove_ads">When you purchase at least two items, ads will be removed</string>
    <string name="photo_editor_confirm_uninstall">Are you sure you want to uninstall this package?</string>
    <string name="photo_editor_confirm_delete_image">Are you sure you want to delete this image?</string>
    <string name="photo_editor_share">Share</string>
    <string name="photo_editor_edit">Edit</string>
    <string name="photo_editor_delete">Delete</string>
    <string name="photo_editor_rate_app">Give us 5 stars.</string>
    <string name="photo_editor_facebook_share_title">Kool Cropper</string>
    <string name="photo_editor_facebook_share_content">You can make a lot of amazing photos with Kool Cropper. Let\'s install.</string>
    <string name="photo_editor_error">Error</string>
    <string name="photo_editor_success">Success</string>
    <string name="photo_editor_successfully_posted_post">Post successfully.</string>
	<string name="photo_editor_cancelled">Cancelled</string>
    <string name="photo_editor_permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="photo_editor_ok">OK</string>
    <string name="photo_editor_facebook_share">Facebook Share</string>
    <!-- Toast Messages -->
    <string name="photo_editor_camera_not_found">No camera harware found</string>
    <string name="photo_editor_take_photo_help">Touch anywhere on screen to take picture</string>
    <string name="photo_editor_posted">Posted</string>
    <string name="photo_editor_you_must_install_facebook_app">You must install facebook app</string>
    <string name="photo_editor_back">Back</string>
    <string name="photo_editor_view_image">View Image</string>
    <string name="photo_editor_left">Left</string>
    <string name="photo_editor_right">Right</string>
    <string name="photo_editor_vertical">Vertical</string>
    <string name="photo_editor_horizontal">Horizontal</string>
    <string name="photo_editor_share_image">Share Image</string>
    <string name="photo_editor_guide_zoom_image">Using two fingers to zoom in/zoom out image</string>
    <string name="photo_editor_guide_drag_image">Using your finger to drag image</string>
    <string name="photo_editor_guide_rotate_image">Using your finger to rotate image</string>
    <string name="photo_editor_guide_zoom_focus_area">Using two fingers to zoom in/zoom out focus area</string>
    <string name="photo_editor_guide_drag_focus_area">Using your finger to drag focus area</string>
    <string name="photo_editor_internal_storage">Internal storage</string>
</resources>