<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#40000000"
    android:gravity="bottom"
    android:id="@+id/dialogAddImage"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/photo_editor_rounded_corners_rect"
        android:gravity="bottom"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/photo_editor_select"
            android:textColor="#8A8A8A"
            android:textSize="12sp"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#DADADE"
            android:visibility="gone" />

        <TextView
            android:id="@+id/cameraView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/photo_editor_camera"
            android:textColor="#007AFF"
            android:textSize="16sp"
            android:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#DADADE"
            android:visibility="visible" />

        <TextView
            android:id="@+id/galleryView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/photo_editor_photo_library"
            android:textColor="#007AFF"
            android:textSize="16sp" />

     
    </LinearLayout>

    <TextView
        android:id="@+id/cancelView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/photo_editor_rounded_corners_rect"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/photo_editor_cancel"
        android:textColor="#007AFF"
        android:textSize="16sp" />

</LinearLayout>