<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/photo_editor_bg_full_screen_dialog"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp" >

            <RadioButton
                android:id="@+id/normalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/photo_editor_normal"
                android:textColor="@color/photo_editor_bg_action_bar" />

            <RadioButton
                android:id="@+id/blurButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo_editor_blur"
                android:textColor="@color/photo_editor_bg_action_bar" />

            <RadioButton
                android:id="@+id/embossButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo_editor_emboss"
                android:textColor="@color/photo_editor_bg_action_bar" />

            <RadioButton
                android:id="@+id/srcATopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo_editor_src_a_top"
                android:textColor="@color/photo_editor_bg_action_bar" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/photo_editor_separate_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/okButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dp"
                android:text="@android:string/ok"
                android:textColor="@color/photo_editor_bg_action_bar"  />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/photo_editor_separate_color" 
                android:visibility="gone"/>

            <TextView
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dp"
                android:visibility="gone"
                android:textColor="@color/photo_editor_bg_action_bar" 
                android:text="@android:string/cancel" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>